--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,14 @@
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false, // Changed from true to fix TS1484 errors
     "noEmit": true,
 
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false, // Changed from true to fix undefined index access
 
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
